--- a/Mealmate.Admin/Mealmate.Admin.csproj
+++ b/Mealmate.Admin/Mealmate.Admin.csproj
@@ -10,12 +10,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Views\" />
+    <Folder Include="Views\Auth\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\scripts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
