signin , home pages added.
Related Work Items: #33

--- a/Mealmate.Admin/Mealmate.Admin.csproj
+++ b/Mealmate.Admin/Mealmate.Admin.csproj
@@ -5,16 +5,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\css\**" />
+    <Compile Remove="wwwroot\images\**" />
+    <Compile Remove="wwwroot\scripts\**" />
+    <Content Remove="wwwroot\css\**" />
+    <Content Remove="wwwroot\images\**" />
+    <Content Remove="wwwroot\scripts\**" />
+    <EmbeddedResource Remove="wwwroot\css\**" />
+    <EmbeddedResource Remove="wwwroot\images\**" />
+    <EmbeddedResource Remove="wwwroot\scripts\**" />
+    <None Remove="wwwroot\css\**" />
+    <None Remove="wwwroot\images\**" />
+    <None Remove="wwwroot\scripts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Mealmate.BusinessLayer\Mealmate.BusinessLayer.csproj" />
     <ProjectReference Include="..\Mealmate.Entities\Mealmate.Entities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="ViewModels\" />
-    <Folder Include="Views\Auth\" />
-    <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\scripts\" />
   </ItemGroup>
 
   <ItemGroup>
