--- a/Mealmate.Admin/Mealmate.Admin.csproj
+++ b/Mealmate.Admin/Mealmate.Admin.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
