restructuring due to client requirements
Related Work Items: #42

--- a/Mealmate.Admin/Mealmate.Admin.csproj
+++ b/Mealmate.Admin/Mealmate.Admin.csproj
@@ -16,7 +16,12 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Restaurant\Data\" />
+    <Folder Include="Areas\Setting\Controllers\" />
     <Folder Include="Areas\Setting\Data\" />
+    <Folder Include="Areas\Setting\ViewComponents\" />
+    <Folder Include="Areas\Setting\ViewModels\" />
+    <Folder Include="Areas\Setting\Views\Shared\Components\" />
   </ItemGroup>
 
   <ItemGroup>
