new repo project created

--- a/Mealmate.BusinessLayer/Mealmate.BusinessLayer.csproj
+++ b/Mealmate.BusinessLayer/Mealmate.BusinessLayer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Mealmate.DataAccess\Mealmate.DataAccess.csproj" />
+    <ProjectReference Include="..\Mealmate.Repository\Mealmate.Repository.csproj" />
   </ItemGroup>
 
 </Project>
