SignUp, Forget Password Design Implemented...  Restaurant Information Update Interface Impemented.. admin Dashboard Design
Related Work Items: #43

--- a/Mealmate.Admin/Properties/launchSettings.json
+++ b/Mealmate.Admin/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       }
     },
     "Mealmate.Admin": {
-      "commandName": "Project",
+      "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
