--- a/Mealmate.WebApi/Mealmate.WebApi.csproj
+++ b/Mealmate.WebApi/Mealmate.WebApi.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\Mealmate.BusinessLayer\Mealmate.BusinessLayer.csproj" />
   </ItemGroup>
 
