Auth controller created

--- a/Mealmate.WebApi/appsettings.json
+++ b/Mealmate.WebApi/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "Token": "12b6fb24-adb8-4ce5-aa49-79b265ebf256"
+    "Token": "12b6fb24-adb8-4ce5-aa49-79b265ebf256",
+    "Issuer": "",
+    "Audience": ""
   }
 }
