all migration tables are created at first run

--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=MealMateDB2;",
+  "ConnectionString": "Server=WASEEM-PC\\SQLSERVER2016;Integrated Security=true;Initial Catalog=MealMateDB2;",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://localhost:64167",
