--- a/Mealmate.Api/Mealmate.Api.csproj
+++ b/Mealmate.Api/Mealmate.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Mealmate.Infrastructure\Mealmate.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
