--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=LEARNING17\\TAJ;Integrated Security=true;Initial Catalog=MealMateDB2;",
+  "Tokens": {
+    "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
+    "Issuer": "http://localhost:64167",
+    "Audience": "expertise"
+  }
 }
