--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=LEARNING17\\TAJ;Integrated Security=true;Initial Catalog=MealMateDB2;",
+  "ConnectionString": "Server=TAJ\\LEARNING17;Integrated Security=true;Initial Catalog=MealMateDB2;",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://localhost:64167",
