connection string for development

--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=TAJ\\LEARNING17;Integrated Security=true;Initial Catalog=MealMateDB2;",
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=MealMateDB2;",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://localhost:64167",
-    "Audience": "expertise"
+    "Audience": "http://localhost:64167"
   }
 }
