--- a/Mealmate.Application/Mealmate.Application.csproj
+++ b/Mealmate.Application/Mealmate.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="QRCoder" Version="1.3.9" />
   </ItemGroup>
 
   <ItemGroup>
