--- a/Mealmate.Api/Mealmate.Api.csproj
+++ b/Mealmate.Api/Mealmate.Api.csproj
@@ -33,6 +33,7 @@
     <Compile Include="Requests\ChangePasswordRequest.cs" />
     <Compile Include="Requests\LoginRequest.cs" />
     <Compile Include="Requests\RegisterRequest.cs" />
+    <Compile Include="Requests\SearchPageRequest.cs" />
   </ItemGroup>
 
   <ItemGroup>
