settings up google login

--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -5,6 +5,10 @@
     "Issuer": "http://localhost:64167",
     "Audience": "http://localhost:64167"
   },
+
+  "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
+  "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,7 +16,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
   "SendGridKey": "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",
   "SendGridUser": "Mealmate Service"
+
 }
