--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -12,5 +12,7 @@
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://localhost:64167",
     "Audience": "http://localhost:64167"
-  }
+  },
+  "SendGridKey": "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",
+  "SendGridUser": "Mealmate Service"
 }
