major structural changes in api

--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=.\\MSSQLSERVER2017;Initial Catalog=MealmateDb;User ID=mealmate;Password=tsdDB2k19-19",
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=MealMateDB2;",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://localhost:64167",
