correction in settings...

--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -1,14 +1,4 @@
 {
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=MealMateDB2;",
-  "Tokens": {
-    "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
-    "Issuer": "http://localhost:64167",
-    "Audience": "http://localhost:64167"
-  },
-
-  "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
-  "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt",
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,7 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "SendGridKey": "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",
-  "SendGridUser": "Mealmate Service"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=MealMateDB2",
+  "Tokens": {
+    "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
+    "Issuer": "http://mealmate-api.askhorizons.com",
+    "Audience": "http://mealmate-api.askhorizons.com "
+  },
 
+  //SendGrid
+  "SendGridKey": "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",
+  "SendGridUser": "Mealmate Service",
+
+  //Google
+  "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
+  "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt"
 }
