Role is asigned on register.. Tracking issue Identity Context Resolved.

--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=MealMateDB2",
+  "ClientAppUrl": "http://mealmate-api.askhorizons.com",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://mealmate-api.askhorizons.com",
