--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -8,16 +8,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "Server=.\\MSSQLSERVER2017;Initial Catalog=MealmateDb;User ID=mealmate;Password=tsdDB2k19-19",
+  "ClientAppUrl": "http://mealmate-api.askhorizons.com",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://mealmate-api.askhorizons.com",
     "Audience": "http://mealmate-api.askhorizons.com "
   },
-  
+
   //SendGrid
   "SendGridKey": "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",
   "SendGridUser": "Mealmate Service",
-  
+
   //Google
   "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
   "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt"
