--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Initial Catalog=MealmateDb;Integrated Security=true;",
+  "ConnectionString": "Server=.\\MSSQLSERVER2017;Initial Catalog=MealmateDb;User ID=mealmate;Password=tsdDB2k19-19",
   "ClientAppUrl": "http://mealmate-api.askhorizons.com",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
