--- a/Mealmate.Api/web.config
+++ b/Mealmate.Api/web.config
@@ -2,12 +2,15 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <modules>
+        <remove name="WebDAVModule" />
+      </modules>
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="C:\Projects\SalmanBhai\Mealmate-DotNet\Mealmate.Api\bin\netcoreapp3.1\Mealmate.Api.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="C:\Projects\SalmanBhai\Mealmate-DotNet\Mealmate.Api\bin\netcoreapp3.1\Mealmate.Api.exe" arguments="" stdoutLogEnabled="false" hostingModel="inprocess">
         <environmentVariables>
-          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
