--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "Server=(localdb)\\mssqllocaldb;Initial Catalog=MealmateDb;Integrated Security=true;",
-  "ClientAppUrl": "http://mealmate-api.askhorizons.com",
+  "ClientAppUrl": "http://mealmate-admin.askhorizons.com",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://mealmate-api.askhorizons.com",
@@ -19,7 +19,15 @@
   "SendGridKey": "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",
   "SendGridUser": "Mealmate Service",
 
+
+  //Facebook
+  "FacebookAuthSettings": {
+    "AppId": "979321112528640",
+    "AppSecret": "92689d2cc662bf33cc4840cd0d3e64e1"
+  },
   //Google
-  "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
-  "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt"
+  "GoogleAuthSettings": {
+    "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
+    "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt"
+  }
 }
