Working on RefreshToken. RefreshToken table added.

--- a/Mealmate.Api/Mealmate.Api.csproj
+++ b/Mealmate.Api/Mealmate.Api.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Requests\ChangePasswordRequest.cs" />
     <Compile Include="Requests\GoogleLoginRequest.cs" />
     <Compile Include="Requests\MobileRegisterRequest.cs" />
+    <Compile Include="Requests\RefreshTokenRequest.cs" />
     <Compile Include="Requests\ResetPasswordRequest.cs" />
     <Compile Include="Requests\LoginRequest.cs" />
     <Compile Include="Requests\RegisterRequest.cs" />
