fixed some deployment issues

--- a/Mealmate.Api/Properties/launchSettings.json
+++ b/Mealmate.Api/Properties/launchSettings.json
@@ -19,6 +19,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "ancmHostingModel": "OutOfProcess",
       "nativeDebugging": false
     },
     "Mealmate.Api": {
