OTP using Twillio

--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -29,5 +29,10 @@
   "GoogleAuthSettings": {
     "ClientId": "16235820953-7kkakqjog28gjrk3jtl9s8k72t0jcli8.apps.googleusercontent.com",
     "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt"
+  },
+  // Twillio: User email (salman1277@gmail.com)
+  "Twillio": {
+    "AccountId": "AC621afe373e5dee9401ac46b1942a4243",
+    "Token": "9ab85f31396b5127676de9993c4724d9"
   }
 }
