--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -31,8 +31,9 @@
     "ClientSecret": "YqoqaI5sLTCIGu7fw4OtQDrt"
   },
   // Twillio: User email (salman1277@gmail.com)
-  "Twillio": {
+  "Twilio": {
     "AccountId": "AC621afe373e5dee9401ac46b1942a4243",
-    "Token": "9ab85f31396b5127676de9993c4724d9"
+    "Token": "9ab85f31396b5127676de9993c4724d9",
+    "PhoneNumber": "+12058314868"
   }
 }
