--- a/Mealmate.Api/Mealmate.Api.csproj
+++ b/Mealmate.Api/Mealmate.Api.csproj
@@ -61,6 +61,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.5.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+    <PackageReference Include="Twilio" Version="5.45.1" />
   </ItemGroup>
 
   <ItemGroup>
