branch menus listing

--- a/Mealmate.Api/Properties/launchSettings.json
+++ b/Mealmate.Api/Properties/launchSettings.json
@@ -23,6 +23,7 @@
     },
     "Mealmate.Api": {
       "commandName": "Project",
+      "launchUrl": "swagger",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
