--- a/Mealmate.Application/Mealmate.Application.csproj
+++ b/Mealmate.Application/Mealmate.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="QRCoder" Version="1.3.9" />
   </ItemGroup>
 
