email confirmation endpoint added.

--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "Server=.\\MSSQLSERVER2017;Initial Catalog=MealmateDbDev;User ID=mealmate;Password=tsdDB2k19-19",
-  "ClientAppUrl": "http://mealmate-api.askhorizons.com",
+  "ClientAppUrl": "http://mealmate-admin.askhorizons.com",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
     "Issuer": "http://mealmate-api.askhorizons.com",
