--- a/Mealmate.Api/Mealmate.Api.csproj
+++ b/Mealmate.Api/Mealmate.Api.csproj
@@ -63,6 +63,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.5.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     <PackageReference Include="Twilio" Version="5.45.1" />
+    <PackageReference Include="UAParser" Version="3.1.44" />
   </ItemGroup>
 
   <ItemGroup>
