--- a/Mealmate.Api/Properties/launchSettings.json
+++ b/Mealmate.Api/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iis": {
-      "applicationUrl": "http://localhost/Mealmate.Api",
+      "applicationUrl": "http://localhost/",
       "sslPort": 0
     },
     "iisExpress": {
