--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -16,7 +16,8 @@
   },
 
   //SendGrid
-  "SendGridKey": "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",
+  "SendGridKey": "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",
+  "SendGridToken": "lgRJYvAhTPazgnhM3y56kQ",
   "SendGridUser": "Mealmate Service",
 
 
