order posting issue is resolved.

--- a/Mealmate.Api/web.config
+++ b/Mealmate.Api/web.config
@@ -8,7 +8,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="D:\Projects\Mealmate-DotNet\Mealmate.Api\bin\netcoreapp3.1\Mealmate.Api.exe" arguments="" stdoutLogEnabled="false" hostingModel="outofprocess">
+      <aspNetCore processPath="D:\Projects\Mealmate-DotNet\Mealmate.Api\bin\netcoreapp3.1\Mealmate.Api.exe" arguments="" stdoutLogEnabled="false" hostingModel="inprocess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
         </environmentVariables>
