--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -7,17 +7,16 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Initial Catalog=MealmateDbDev;Integrated Security=true;",
-  "ClientAppUrl": "http://mealmate-admin.askhorizons.com",
+  "ConnectionString": "Server=tcp:mealmate.database.windows.net,1433;Initial Catalog=MealMate;User ID=mealmate;Password=zJ(C_-2su{T^",
+  "ClientAppUrl": "https://mealmateapi.azurewebsites.net",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
-    "Issuer": "http://mealmate-api.askhorizons.com",
-    "Audience": "http://mealmate-api.askhorizons.com "
+    "Issuer": "https://mealmateapi.azurewebsites.net",
+    "Audience": "https://mealmateapi.azurewebsites.net"
   },
 
   //SendGrid
-  "SendGridKey": "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",
-  "SendGridToken": "lgRJYvAhTPazgnhM3y56kQ",
+  "SendGridKey": "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",
   "SendGridUser": "Mealmate Service",
 
 
