--- a/Mealmate.Api/web.config
+++ b/Mealmate.Api/web.config
@@ -8,9 +8,11 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="D:\Projects\Mealmate-DotNet\Mealmate.Api\bin\netcoreapp3.1\Mealmate.Api.exe" arguments="" stdoutLogEnabled="false" hostingModel="inprocess">
+      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" hostingModel="inprocess">
         <environmentVariables>
-          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44336" />
+          <environmentVariable name="COMPLUS_ForceENC" value="1" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
