Updated Email settings

--- a/Mealmate.Api/appsettings.Development.json
+++ b/Mealmate.Api/appsettings.Development.json
@@ -16,8 +16,8 @@
   },
 
   //SendGrid
-  "SendGridKey": "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",
-  "SendGridUser": "Mealmate Service",
+  "SendGridKey": "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",
+  "SendGridUser": "Meal Mate",
 
 
   //Facebook
