--- a/Mealmate.Api/appsettings.json
+++ b/Mealmate.Api/appsettings.json
@@ -7,17 +7,18 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=tcp:mealmate.database.windows.net,1433;Initial Catalog=MealMate;User ID=mealmate;Password=zJ(C_-2su{T^",
-  "ClientAppUrl": "https://mealmateapi.azurewebsites.net",
+  "ConnectionString": "Server=.\\MSSQLSERVER2017;Initial Catalog=MealmateDbDev;User ID=mealmate;Password=tsdDB2k19-19",
+  "ClientAppUrl": "http://mealmate-admin.askhorizons.com",
   "Tokens": {
     "Key": "a1s2d3f4g5h5*-*0*897867545,i.l!!!!",
-    "Issuer": "https://mealmateapi.azurewebsites.net",
-    "Audience": "https://mealmateapi.azurewebsites.net"
+    "Issuer": "http://mealmate-api.askhorizons.com",
+    "Audience": "http://mealmate-api.askhorizons.com "
   },
 
   //SendGrid
-  "SendGridKey": "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",
-  "SendGridUser": "Meal Mate",
+  "SendGridKey": "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",
+  "SendGridToken": "lgRJYvAhTPazgnhM3y56kQ",
+  "SendGridUser": "Mealmate Service",
 
 
   //Facebook
